--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
   "bugs": {
     "url": "https://github.com/adam-ballinger/panel-data/issues"
   },
-  "homepage": "https://github.com/adam-ballinger/panel-data#readme",
+  "homepage": "https://github.com/adam-ballinger/panel-data/wiki",
   "files": [
     "index.js",
     "series.js",
     "panel-data.js"
   ],
   "devDependencies": {
+    "eslint": "^9.10.0",
+    "globals": "^15.9.0",
     "jest": "^29.7.0"
   }
 }
